상품 로직 리팩토링