@@ -1,13 +1,13 @@
 package com.ryuqq.core.external.sellic.mapper;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 
 import org.springframework.stereotype.Component;
 
-import com.ryuqq.core.domain.product.core.ProductContextInterface;
-import com.ryuqq.core.domain.product.core.Sku;
+import com.ryuqq.core.domain.product.core.ProductContext;
+import com.ryuqq.core.domain.product.core.ProductOptionContext;
+import com.ryuqq.core.domain.product.core.ProductOptionContextQueryInterface;
 import com.ryuqq.core.enums.OptionType;
 import com.ryuqq.core.external.sellic.SellicOptionContext;
 import com.ryuqq.core.external.sellic.request.SellicProductOptionInsertRequestDto;
@@ -15,89 +15,78 @@ import com.ryuqq.core.external.sellic.request.SellicProductOptionInsertRequestDt
 @Component
 public class SellicOptionConverter {
 
-	private final ProductContextInterface productContextInterface;
+	private final ProductOptionContextQueryInterface productOptionContextQueryInterface;
 
-	public SellicOptionConverter(ProductContextInterface productContextInterface) {
-		this.productContextInterface = productContextInterface;
+	public SellicOptionConverter(ProductOptionContextQueryInterface productOptionContextQueryInterface) {
+		this.productOptionContextQueryInterface = productOptionContextQueryInterface;
 	}
 
 	public SellicOptionContext generateOptionContext(long productGroupId) {
-		List<? extends Sku> skus = fetchSkus(productGroupId);
-		OptionType optionType = determineOptionType(skus);
+		ProductOptionContext productOptionContext = fetchProductOptionContext(productGroupId);
+		OptionType optionType = productOptionContext.getOptionType();
 
-		String optionName1 = resolveOptionName(optionType, skus, true);
-		String optionName2 = resolveOptionName(optionType, skus, false);
+		String optionName1 = resolveOptionName(optionType, productOptionContext.getProducts(), true);
+		String optionName2 = resolveOptionName(optionType, productOptionContext.getProducts(), false);
 
-		List<SellicProductOptionInsertRequestDto> sellicOptionDtos = createOptionDtos(optionType, skus);
+		List<SellicProductOptionInsertRequestDto> sellicOptionDtos = createOptionDtos(optionType, productOptionContext.getProducts());
 
 		return new SellicOptionContext(sellicOptionDtos, optionName1, optionName2);
 	}
 
-	private List<? extends Sku> fetchSkus(long productGroupId) {
-		return Optional.ofNullable(productContextInterface.fetchByProductGroupId(productGroupId))
-			.orElse(Collections.emptyList());
+	private ProductOptionContext fetchProductOptionContext(long productGroupId) {
+		return productOptionContextQueryInterface.fetchByProductGroupId(productGroupId);
 	}
 
-	private OptionType determineOptionType(List<? extends Sku> skus) {
-		if (skus.isEmpty()) {
-			return OptionType.SINGLE;
-		}
 
-		int optionSize = skus.getFirst().getVariants().size();
-		return switch (optionSize) {
-			case 0 -> OptionType.SINGLE;
-			case 1 -> OptionType.OPTION_ONE;
-			default -> OptionType.OPTION_TWO;
-		};
-	}
 
-	private String resolveOptionName(OptionType optionType, List<? extends Sku> skus, boolean isFirstOption) {
+
+	private String resolveOptionName(OptionType optionType, List<? extends ProductContext> productContexts, boolean isFirstOption) {
 		if (optionType.isSingleOption()) {
 			if(isFirstOption) return "단품";
 			return "";
 		}
 
-		return skus.stream()
+		return productContexts.stream()
 			.findFirst()
 			.flatMap(sku -> getOptionNameFromSku(sku, isFirstOption))
 			.orElse("");
 	}
 
-	private Optional<String> getOptionNameFromSku(Sku sku, boolean isFirstOption) {
-		if (sku.getVariants().isEmpty()) {
+	private Optional<String> getOptionNameFromSku(ProductContext productContext, boolean isFirstOption) {
+		if (productContext.getOptions().isEmpty()) {
 			return Optional.empty();
 		}
 
 		return Optional.of(
-			isFirstOption ? sku.getVariants().getFirst().getOptionName().name() :
-				(sku.getVariants().size() > 1 ? sku.getVariants().getLast().getOptionName().name() : "")
+			isFirstOption ? productContext.getOptions().getFirst().getOptionName().name() :
+				(productContext.getOptions().size() > 1 ? productContext.getOptions().getLast().getOptionName().name() : "")
 		);
 	}
 
-	private List<SellicProductOptionInsertRequestDto> createOptionDtos(OptionType optionType, List<? extends Sku> skus) {
+	private List<SellicProductOptionInsertRequestDto> createOptionDtos(OptionType optionType, List<? extends ProductContext> skus) {
 		return skus.stream()
 			.map(sku -> toSellicOptionDto(optionType, sku))
 			.toList();
 	}
 
-	private SellicProductOptionInsertRequestDto toSellicOptionDto(OptionType optionType, Sku sku) {
+	private SellicProductOptionInsertRequestDto toSellicOptionDto(OptionType optionType, ProductContext productContext) {
 		String optionData1 = "단품";
 		String optionData2 = "";
 
 		if (optionType.isMultiOption()) {
-			optionData1 = sku.getVariants().get(0).getOptionValue();
+			optionData1 = productContext.getOptions().getFirst().getOptionValue();
 
-			if (optionType.isTwoDepthOption() && sku.getVariants().size() > 1) {
-				optionData2 = sku.getVariants().get(1).getOptionValue();
+			if (optionType.isTwoDepthOption() && productContext.getOptions().size() > 1) {
+				optionData2 = productContext.getOptions().getLast().getOptionValue();
 			}
 		}
 
 		return new SellicProductOptionInsertRequestDto(
 			optionData1,
 			optionData2,
-			sku.isDisplayed() ? 0 : 1,
-			sku.getAdditionalPrice(),
-			sku.getQuantity()
+			productContext.getProduct().isDisplayed() ? 0 : 1,
+			productContext.getProduct().getAdditionalPrice(),
+			productContext.getProduct().getQuantity()
 		);
 	}
 }
